--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Service</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -55,22 +55,29 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interfaces 1</li>
-                            <li><span>Web Development</span><br>Web App Development</li>
-                            <li><span>Web Development</span><br>Building Android/ios apps</li>
+                            <li><span>Figma, excel, word</span><br></li>
+                            <li><span>HTML/Css, Javascript, ReactJs</span><br</li>
+                            <li><span>Bootstrap, TailwindCss</span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interfaces 2</li>
-                            <li><span>Web Development</span><br>Web App Development</li>
-                            <li><span>Web Development</span><br>Building Android/ios apps</li>
+                            <li><span>Web Development</span><br>Project at FPT Polytechnic College of Practice</li>
+                            <li><span></span><br>Developing and maintaining the
+                            front-end functionality of websites.</li>
+                            <li><span></span><br>Writing cross-browser compliant
+                            HTML, CSS & JavaScript</li>
+                            <li><span></span><br>Participating in discussions with
+                            clients to clarify what they want.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interfaces 3</li>
-                            <li><span>Web Development</span><br>Web App Development</li>
+                            <li><span>UI/UX</span><br>Developing and maintaining the
+                                front-end functionality of websites.
+                            </li>
+                            <li><span>Web Development</span><br>Writing cross-browser compliant
+                            HTML, CSS & JavaScript</li>
                             <li><span>Web Development</span><br>Building Android/ios apps</li>
                         </ul>
                     </div>
@@ -129,22 +136,22 @@
                 <div class="work">
                     <img src="https://images.unsplash.com/photo-1513128034602-7814ccaddd4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8d29ya3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
                         alt="">
-                        <div class="layer">
-                            <h3>Music App</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, adipisci aliquam. Fuga dolores
-                                magnam minus itaque voluptatem consectetur cumque quo?</p>
-                            <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
+                    <div class="layer">
+                        <h3>Music App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, adipisci aliquam. Fuga dolores
+                            magnam minus itaque voluptatem consectetur cumque quo?</p>
+                        <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
                 </div>
                 <div class="work">
                     <img src="https://images.unsplash.com/photo-1657664065728-4ee40c444171?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxzZWFyY2h8OHx8d29ya3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
                         alt="">
-                        <div class="layer">
-                            <h3>Online Shopping App</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, adipisci aliquam. Fuga dolores
-                                magnam minus itaque voluptatem consectetur cumque quo?</p>
-                            <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
+                    <div class="layer">
+                        <h3>Online Shopping App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, adipisci aliquam. Fuga dolores
+                            magnam minus itaque voluptatem consectetur cumque quo?</p>
+                        <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
                 </div>
             </div>
             <a href="" class="btn">See more</a>
