--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="header">
         <div class="container">
-            <nav>
+            <nav id="scroll">
                 <img src="" alt="" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
@@ -28,7 +28,7 @@
                 <i class="fa-solid fa-bars" onclick="openMenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Web Development</p>
                 <h1>Hi, I'm <span>Nhat</span> <br> From Vietnamese</h1>
             </div>
         </div>
@@ -38,15 +38,15 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-                        alt="">
+                    <img src="img/anh-ban-than.jpg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ullam assumenda sed pariatur atque
-                        quibusdam ipsa, iste reprehenderit delectus, laudantium aliquid aspernatur quis. Quam recusandae
-                        eaque atque laborum dicta modi quod, vitae cupiditate quae rem iusto architecto. Nesciunt illum
-                        nihil nisi tempora temporibus aliquam, nam, explicabo eligendi quas est voluptatibus.</p>
+                    <p>An inquisitive and hardworking person, passionate about programming and wants to join a group of
+                        like-minded
+                        programmers. Looking for a suitable position in the company where I can help me improve my
+                        skills as well as
+                        working experience and doing typical projects</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
@@ -56,7 +56,8 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Figma, excel, word</span><br></li>
-                            <li><span>HTML/Css, Javascript, ReactJs</span><br</li>
+                            <li><span>HTML/Css, Javascript, ReactJs</span>
+                                <br< /li>
                             <li><span>Bootstrap, TailwindCss</span><br></li>
                         </ul>
                     </div>
@@ -64,21 +65,25 @@
                         <ul>
                             <li><span>Web Development</span><br>Project at FPT Polytechnic College of Practice</li>
                             <li><span></span><br>Developing and maintaining the
-                            front-end functionality of websites.</li>
+                                front-end functionality of websites.</li>
                             <li><span></span><br>Writing cross-browser compliant
-                            HTML, CSS & JavaScript</li>
+                                HTML, CSS & JavaScript</li>
                             <li><span></span><br>Participating in discussions with
-                            clients to clarify what they want.</li>
+                                clients to clarify what they want.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>UI/UX</span><br>Developing and maintaining the
-                                front-end functionality of websites.
+                            <li><span>Web Development</span><br>Web design user-side interface.
+                                PSD to HTML/CSS
                             </li>
-                            <li><span>Web Development</span><br>Writing cross-browser compliant
-                            HTML, CSS & JavaScript</li>
-                            <li><span>Web Development</span><br>Building Android/ios apps</li>
+                            <li><span></span><br>Learning/ working individually and
+                                with friends to improve class projects
+                                and personal projects.
+                            </li>
+                            <li><span></span><br>Knowledge of HTML, CSS, JavaScript
+                                and Anguler/ ReactJs.
+                            </li>
                         </ul>
                     </div>
                 </div>
